--- a/SimpleGame/SimpleGame/SimpleGame.vcxproj.filters
+++ b/SimpleGame/SimpleGame/SimpleGame.vcxproj.filters
@@ -64,6 +64,12 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\Particle.fs">
+      <Filter>소스 파일\Shaders</Filter>
+    </None>
+    <None Include="Shaders\Particle.vs">
+      <Filter>소스 파일\Shaders</Filter>
+    </None>
     <None Include="Shaders\SolidRect.fs">
       <Filter>소스 파일\Shaders</Filter>
     </None>
